<resources>
    <string name="app_name">taptaze</string>
    <string name="tv_signin">Welcome Back !</string>
    <string name="tv_email">Email</string>
    <string name="tv_password">Password</string>
    <string name="tv_email_and_passwrd">Please sign in to continue.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Sign In</string>
    <string name="don_t_have_an_account_signup">Don\'t have an account ? <u>Signup</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_credentials_to_continue">Enter your credentials to continue</string>
    <string name="already_have_an_account_u_signin_u">Already have an account ? <u>Sign In </u></string>
    <string name="log_out">Log Out</string>
    <string name="special_offers">Special Offers</string>
    <string name="what_do_you_need_for">What do you need for ?</string>
    <string name="order_address">Order Address</string>
    <string name="adress_name">Adress Name</string>
    <string name="order_adress">Order Adress</string>
    <string name="credit_cart_info">Credit Cart Info</string>
    <string name="card_owner">Card Owner</string>
    <string name="card_number">Card Number</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="cvv">CVV</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="your_items_has_been_placed_and_is_on_it_s_way_to_being_processed">Your items has been placed and is on it\'s way to being processed</string>
    <string name="your_order_has_been_accepted">Your order has been accepted !</string>
</resources>